endpoint generation, factory setup and sda init successful

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 mbed_settings.pyc
 /mbed_settings.py
 .mbed
+mbed_cloud_client_user_config.h
+mbed_cloud_dev_credentials.c
+mbed_cloud_trust_anchor_credentials.c
